src/components/AddOns/AddOnCard/AddOnCard.module.css
.addOnCard {
  position: relative;

  &:has(input[type="checkbox"]),
  &:has([data-active]) {
    cursor: pointer;
  }

  &:has(input[type="checkbox"]:checked),
  &:has([data-active="true"]) {
    --_bg-color: var(--very-light-grey);
    --_border-color: var(--border-color-active);
  }
}

.addOnCard + .addOnCard {
  margin-top: 1rem;
}

.addOn {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.checkbox::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;

  width: 100%;
  height: 100%;

  cursor: pointer;
}

.price {
  --_fs: 0.75rem;
  --_lh: 1.25rem;

  font-size: var(--_fs, 1rem);
  line-height: var(--_lh, 0);
  color: var(--purple);
}

